# github-gc

./: .gitignore  .graphqlrc.yml  Cargo.toml  README.md  TODO.md  compiled.rs  download_schema.sh  shell.nix
queries/: user_forks.graphql  user_forks.http  user_prs.graphql  user_prs.http
src/: config.rs  logs.rs  main.rs
src/garbage_collector/: collect_dead_forks.rs  collect_merged_branches.rs  collect_prs.rs  general.rs  get_forks.rs  get_prs.rs  mod.rs
