[package]
name = "github-gc"
version = "0.1.0"
edition = "2024"

[dependencies]
envconfig = "0.11.0"
graphql_client = { version = "0.14.0", features = [ "reqwest" ] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
